# netconfd-server

./: CMakeLists.txt  README.md  start.sh
config/: freenetconfd  netconfd
include/netconfd/: netconfd.h  plugin.h
src/: config.c  config.h  connection.c  connection.h  message.c  messages.h  methods.c  methods.h  netconf.c  netconf.h  netconfd.c  ubus.c
