cmake_minimum_required(VERSION 2.6)
PROJECT(netconfd)
ADD_DEFINITIONS(-Os -Wall --std=gnu11 -Wmissing-declarations -D_GNU_SOURCE -pthread)
INCLUDE_DIRECTORIES(include)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/build/modules")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/netconfd)

SET(SOURCES
	src/netconfd.c
	src/connection.c
	src/connection.h
	src/ubus.c
	src/ubus.h
	src/methods.c
	src/methods.h
	src/config.c
	src/config.h
	src/netconf.c
	src/netconf.h
	src/message.c
	include/netconfd/plugin.h
	include/netconfd/netconf.h
	include/netconfd/netconfd.h
)

ADD_EXECUTABLE(netconfd ${SOURCES})
TARGET_LINK_LIBRARIES(netconfd  ${CMAKE_DL_LIBS})

FIND_PACKAGE(LIBUBOX REQUIRED)
INCLUDE_DIRECTORIES(${LIBUBOX_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(netconfd ${LIBUBOX_LIBRARIES})

FIND_PACKAGE(LIBUBUS REQUIRED)
INCLUDE_DIRECTORIES(${LIBUBUS_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(netconfd ${LIBUBUS_LIBRARIES})

FIND_PACKAGE(LIBROXML REQUIRED)
INCLUDE_DIRECTORIES(${LIBROXML_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(netconfd ${LIBROXML_LIBRARIES})

FIND_PACKAGE(UCI REQUIRED)
INCLUDE_DIRECTORIES(${UCI_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(netconfd ${UCI_LIBRARIES} ${CMAKE_DL_LIBS})

FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})

SET(PLUGIN_INCLUDE_FILES
	include/netconfd/netconfd.h
	include/netconfd/netconf.h
	include/netconfd/plugin.h
)
INSTALL(FILES ${PLUGIN_INCLUDE_FILES} DESTINATION usr/include/netconfd)

INSTALL(TARGETS netconfd RUNTIME DESTINATION usr/bin)
